--- a/imgui.ini
+++ b/imgui.ini
@@ -4,7 +4,52 @@ Size=400,400
 Collapsed=0
 
 [Window][Login]
-Pos=450,164
-Size=402,230
+Pos=30,45
+Size=442,146
+Collapsed=0
+
+[Window][CreateAccount]
+Pos=710,32
+Size=432,181
+Collapsed=0
+
+[Window][HotelBooking]
+Pos=60,60
+Size=260,141
+Collapsed=0
+
+[Window][Locations]
+Pos=674,43
+Size=354,130
+Collapsed=0
+
+[Window][HotelDetails]
+Pos=682,220
+Size=209,172
+Collapsed=0
+
+[Window][Hotels]
+Pos=661,208
+Size=409,209
+Collapsed=0
+
+[Window][Katinjihotels]
+Pos=132,239
+Size=478,225
+Collapsed=0
+
+[Window][arrowOYO]
+Pos=155,231
+Size=489,192
+Collapsed=0
+
+[Window][Vklodge]
+Pos=160,234
+Size=463,210
+Collapsed=0
+
+[Window][FlashOYO]
+Pos=133,232
+Size=473,222
 Collapsed=0
 
